fixed critical errors!

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,11 +21,13 @@ output:
 
 Hello, this is the official README for the Data Cleaning Coursera Project. The depository contains:
 
+'outset': the DESIRED solution to the problem!!! This is all explanation you need to give me full points!
 
+the below don't exactly matter.
 'newdf': a data frame containing information for the 'mean', 'standard_dev', 'result_id', 'result_label', and 'person_id'. Including the 7352 training cases and the 2947 testing cases. 
 
 
-'bigdata': a data frame containing all above information lined up with means for the various variables in 'Inertial Signals'.
+'bigdata': a data frame containig all above information lined up with means for the various variables in 'Inertial Signals'.
 
 
 'by_activity': a data frame containing the means for 'Inertial Signals' information that is sorted by the six activities. 
